# Lab_Work_1-sem.2

./: .gitignore  CMakeLists.txt  main.cpp
